cmake_minimum_required(VERSION 3.14.0)
project (readD1090)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_PREFIX_PATH "~/Documents/json/build")
set(LOCAL_HEADER_FILES "${CMAKE_SOURCE_DIR}/include")
set(CURL_LIBRARY "-lcurl")
#set(USR_LOCAL_INCLUDE "/usr/local/include")
find_package(CURL REQUIRED)
find_package(nlohmann_json 3.2.0 REQUIRED)
find_package(Boost 1.55.0 REQUIRED COMPONENTS system filesystem)
include_directories(${CURL_INCLUDE_DIR} ${LOCAL_HEADER_FILES} ${Boost_INCLUDE_DIRS})
#include_directories(${CURL_INCLUDE_DIR} ${LOCAL_HEADER_FILES} ${Boost_INCLUDE_DIRS} ${USR_LOCAL_INCLUDE})
file(GLOB SOURCES "src/*.cpp")
add_executable(readD1090 ${SOURCES})
target_link_libraries(readD1090 PRIVATE nlohmann_json::nlohmann_json ${CURL_LIBRARIES} Boost::system Boost::filesystem)
